# machinate

./: .clang-format  .gitignore  .gitmodules  ATTRIB.md  CMakeLists.txt  LICENSE  README.md
assets/lua/: serpent.lua  tl.lua  utils.tl
assets/shaders/: depth.vert  fwdplus.frag  fwdplus.vert  lightcull.comp
cmake/: AssimpSettings.cmake  FindLuaJIT.cmake  Libraries.cmake
doc/: Doxyfile  code_convention.md
src/: algorithms.hpp  colour.hpp  console.cpp  console.hpp  data.hpp  defines.hpp.in  ecs.hpp  file.hpp  log.hpp  main.cpp  media.cpp  media.hpp  preproc.hpp  script.cpp  script.hpp  string.hpp  time.hpp  utils.cpp  vulkan.cpp  vulkan.hpp  world.hpp
src/vk/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  detail.cpp  detail.hpp  image.cpp  image.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  ubo.hpp  ubo.ipp  vk_mem_alloc.cpp
